[gd_scene load_steps=31 format=2]

[ext_resource path="res://scripts/Skeleton.gd" type="Script" id=1]
[ext_resource path="res://sprites/Enemies/Abandoned Village/Armored Skeleton/Armored Skeleton Walk.png" type="Texture" id=2]
[ext_resource path="res://sprites/Enemies/Abandoned Village/Armored Skeleton/Armored Skeleton Dead.png" type="Texture" id=3]
[ext_resource path="res://sprites/Enemies/Abandoned Village/Armored Skeleton/Armored Skeleton Attack.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 4 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=21]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "die by stomp",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "die by hit",
"speed": 5.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "shoot",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=22]
extents = Vector2( 4.44756, 6.48466 )

[sub_resource type="RectangleShape2D" id=23]
extents = Vector2( 3.02191, 2.90752 )

[sub_resource type="RectangleShape2D" id=24]
extents = Vector2( 4.30596, 1.34502 )

[sub_resource type="RectangleShape2D" id=25]
extents = Vector2( 42.9171, 3.93306 )

[sub_resource type="RectangleShape2D" id=26]
extents = Vector2( 4.4308, 1.03497 )

[node name="Armored Skeleton" type="KinematicBody2D"]
script = ExtResource( 1 )
particle_color = Color( 0.482353, 0.482353, 0.482353, 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 0.482353, 0.482353, 0.482353, 1 )
frames = SubResource( 21 )
frame = 4
speed_scale = 2.0
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.951767, 1.55783 )
shape = SubResource( 22 )
one_way_collision = true

[node name="Edge Detector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Edge Detector"]
position = Vector2( 9.24419, 11.1333 )
shape = SubResource( 23 )

[node name="Vunerable Area" type="Area2D" parent="."]
visible = false
position = Vector2( 0.140467, 0.23411 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Vunerable Area"]
position = Vector2( 0.875036, -6.16032 )
shape = SubResource( 24 )
disabled = true

[node name="Attack Trigger Area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack Trigger Area"]
position = Vector2( 48.4777, 4.15898 )
shape = SubResource( 25 )

[node name="Deadly Area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Deadly Area"]
position = Vector2( 0.946274, -5.97461 )
shape = SubResource( 26 )

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="Attack Trigger Area" to="." method="_on_Attack_Trigger_Area_body_entered"]
[connection signal="body_exited" from="Attack Trigger Area" to="." method="_on_Attack_Trigger_Area_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
